- Fix AFK plugin sometimes dropping after awhile