@@ -8,5 +8,5 @@
   "permissions" : ["clipboard"],
   "requires" : [],
   "tags" : "User Interface",
-  "version" : "1.5.12"
+  "version" : "1.5.13"
 }
