@@ -7,24 +7,36 @@ afk = PluginClass:new(
 function afk:init()
   self:_loadConfig()
 
+  self.timer = (root.getConfiguration("icc_afk_timer") or 0) * 60
   self.afkTime = self.timer
   self.afkActive = false
-
-  self.enabled = root.getConfiguration("icc_afk_enabled") or false
+  self.forcedAfkTimer = 0
   -- On init, deactivate AFK by force
   self:deactivateAFK(true)
 end
 
 function afk:update(dt)
-  if not self.enabled or #input.events() > 0 then
-    self.afkTime = self.timer
-    self:deactivateAFK()
+  widget.setVisible("btnStartAfk", self.timer ~= 0)
+  if self.forcedAfkTimer > 0 then
+    self.forcedAfkTimer = math.max(self.forcedAfkTimer - dt, 0)
   else
-    self.afkTime = math.max(self.afkTime - dt, 0)
-    if self.afkTime <= 0 then
-      self:activateAFK()
-      player.emote("sleep")
+    if self.timer == 0 or #input.events() > 0 then
+      self.afkTime = self.timer
+      self:deactivateAFK()
+    else
+      self.afkTime = math.max(self.afkTime - dt, 0)
+      if self.afkTime <= 0 then
+        self:activateAFK()
+      end
     end
+  end
+end
+
+function afk:onCustomButtonClick(btnName, data)
+  if btnName == "btnStartAfk" then
+    self.forcedAfkTimer = self.forcedAfkTimer == 0 and self.afkIgnoreTime or 0
+    self.afkTime = self.timer
+    self:activateAFK()
   end
 end
 
@@ -33,6 +45,7 @@ function afk:activateAFK()
     if self.mode == "effect" then
       status.addPersistentEffect("starchatafk", self.effect)
     end
+    player.emote("sleep")
     self.afkActive = true
   end
 end
@@ -48,19 +61,37 @@ function afk:deactivateAFK(force)
 end
 
 function afk:onSettingsUpdate(data)
-  self.enabled = root.getConfiguration("icc_afk_enabled")
+  self.timer = (root.getConfiguration("icc_afk_timer") or 0) * 60
 end
 
 function afk:settings_init(localeConfig)
   widget.setText("lblAfk", localeConfig["settings.afk_mode"])
-  widget.setChecked("chbAFKMode", root.getConfiguration("icc_afk_enabled") or false)
+  widget.setText("lblAfkTimerMin", localeConfig["settings.afk_min"])
+  self.settingsTimer = root.getConfiguration("icc_afk_timer") or 0
+  widget.setText("lblAfkTimer", self.settingsTimer)
+  widget.setData("lblAfkTimer", self.settingsTimer)
 end
 
 function afk:settings_onSave(localeConfig)
   widget.setText("lblAfk", localeConfig["settings.afk_mode"])
+  widget.setText("lblAfkTimerMin", localeConfig["settings.afk_min"])
 end
 
-function turnOnAFK()
-  root.setConfiguration("icc_afk_enabled", widget.getChecked("chbAFKMode"))
+afkTimerSpinner = {}
+function afkTimerSpinner.up()
+  local mins = tonumber(widget.getData("lblAfkTimer")) or 0
+  mins = math.min(mins + 1, 5)
+  widget.setText("lblAfkTimer", mins)
+  widget.setData("lblAfkTimer", mins)
+  root.setConfiguration("icc_afk_timer", tonumber(widget.getData("lblAfkTimer")) or 0)
+  save()
+end
+
+function afkTimerSpinner.down()
+  local mins = tonumber(widget.getData("lblAfkTimer")) or 0
+  mins = math.max(mins - 1, 0)
+  widget.setText("lblAfkTimer", mins)
+  widget.setData("lblAfkTimer", mins)
+  root.setConfiguration("icc_afk_timer", tonumber(widget.getData("lblAfkTimer")) or 0)
   save()
 end
